# opa-flask

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
example/: docker-compose.yml
example/app/: Dockerfile  app.py  requirements.txt
example/app/rego/: policy.rego
example/docker_files/: init.sql
example/docker_files/bundle_files/: z
tests/: app.py  conftest.py  test_opa.py
