[project]
name = "opa-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Coulton Fraser", email = "cjrfraser@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=opa_flask --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
